# cx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  sloc.sh
cx/: array.h  classes.h  common.h  idioms.h  indirection.h  lambda.h  strings.h  templates.h  tuple.h  unsafe.h  vararg.h
docs/: README.md  book.toml
docs/src/: SUMMARY.md  sponsor_development.md
docs/src/feature_headers/: cx_common_h.md  cx_error_h.md  cx_idioms_h.md  cx_lambda_h.md  cx_memory_h.md  cx_option_h.md  cx_templates_h.md  cx_tuple_h.md  cx_unsafe_h.md  cx_vararg_h.md  cx_variant_h.md  index.md
docs/src/feature_headers/cx_common_h/: align_type.md  as_stl_compatible.md  cx_debug_msg.md  cx_pragma_impl.md  cx_pragma_msg.md  cx_stl_support_expr.md  declval.md  dummy.md  dummy_template.md  dummy_value_template.md  expect.md  false_type.md  impossible_template_type.md  impossible_type.md  impossible_value_template_type.md  impossible_value_type.md  nullptr_type.md  size_type.md  true_type.md  void_a.md  void_t.md
docs/src/feature_headers/cx_error_h/: cx_error.md  default_error_handler.md  default_exit_handler.md  error.md  exit.md  get_error_handler.md  get_exit_handler.md  set_error_handler.md  set_exit_handler.md
docs/src/feature_headers/cx_idioms_h/: addition_assignment_operator.md  addition_operator.md  address_operator.md  and_assignment_operator.md  arithmetic.md  array.md  array_decayed.md  array_size.md  array_type_decayed.md  assignment_operator.md  binary_and_operator.md  binary_or_operator.md  comma_operator.md  compliment_operator.md  const.md  const_decayed.md  const_volatile_decayed.md  const_volatile_propagated.md  constructible.md  conversion_operator.md  convertible_to.md  copy_assignable.md  copy_constructible.md  decayed.md  decrement_operator.md  dereference_operator.md  destructible.md  division_assignment_operator.md  division_operator.md  enum.md  equality_operator.md  floating.md  function_operator.md  function_prototype.md  function_with_prototype.md  greater_or_equal_than_operator.md  greater_than_operator.md  has_base.md  increment_operator.md  inequality_operator.md  (+57 more)
docs/src/feature_headers/cx_lambda_h/: alloc_lambda.md  compatible_lambda.md  cx_lambda_buf_align.md  cx_lambda_buf_size.md  incompatible_lambda_error.md  is_alloc_lambda.md  is_lambda.md  is_non_alloc_lambda.md  lambda.md  uninitialized_lambda_error.md
docs/src/feature_headers/cx_memory_h/: alloc_defer.md  defer.md
docs/src/feature_headers/cx_option_h/: is_option.md  option.md  option_paramter.md  option_tuple.md
docs/src/feature_headers/cx_templates_h/: argument_at_index.md  index_of_template_type.md  index_of_type.md  index_of_value.md  max_type_alignment.md  max_type_size.md  max_value.md  min_type_alignment.md  min_type_size.md  min_value.md  select_template_type.md  select_type.md  select_value.md  template_type_at_index.md  template_type_iterator.md  template_type_parameter_deducer.md  type_alignment.md  type_at_index.md  type_iterator.md  type_parameter_deducer.md  type_size.md  value_at_index.md  value_iterator.md  value_parameter_deducer.md
docs/src/feature_headers/cx_tuple_h/: is_tuple.md  rtie.md  tie.md  tuple.md
docs/src/feature_headers/cx_unsafe_h/: member_ptr.md  union_cast.md
docs/src/feature_headers/cx_vararg_h/: cx_va_arg.md  cx_va_end.md  cx_va_start.md  cx_vararg_intrensics.md  invalid_platform_va_list_error.md  va_list.md
docs/src/feature_headers/cx_variant_h/: compatible_variant.md  incompatible_variant_error.md  is_variant.md  variant_type_error.md
docs/src/feature_hedaers/cx_variant_h/: variant.md
docs/src/getting_started/: abi_and_api_guarantees.md  core_concepts.md  porting.md  supported_compilers.md
docs/theme/: README.md  head.hbs
include/: array.h  strings.h
include/cx/: allocator.h  bitset.h  common.h  error.h  exit.h  idioms.h  lambda.h  memory.h  new-variant.h  new-variant2.h  option.h  result.h  result2.h  templates.h  tuple.h  unsafe.h  utility.h  vararg.h  variant.h
include/cx/internal/: header-only.h
scripts/: compiler.cmake  flags.cmake  util.cmake
scripts/cmake/: compiler.cmake  flags.cmake  tests.cmake
scripts/cmake/compiler/: clang.cmake
src/: main.cpp
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt
test/benchmark/include/cx/test/benchmark/: common.h
test/benchmark/src/cx/: lambda.cpp  vararg.cpp  variant.cpp
test/common/: CMakeLists.txt
test/common/include/cx/test/common/: common.h
test/unit/: CMakeLists.txt
test/unit/src/cx/: allocator.cpp  bitset.cpp  common.cpp  common.h  error.cpp  exit.cpp  idioms.cpp  lambda.cpp  memory.cpp  new-variant.cpp  new-variant2.cpp  option.cpp  result.cpp  result2.cpp  templates.cpp  tuple.cpp  unsafe.cpp  utility.cpp  vararg.cpp  variant.cpp
